tests/baselines/reference/topLevelAwaitErrors.10(module=esnext).errors.txt
index.ts(2,19): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


==== index.ts (1 errors) ====
    // await disallowed in alias of named import
    import { await as await } from "./other";
                      ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    
==== other.ts (0 errors) ====
    declare const _await: any;
    export { _await as await };
    